[project]
name = "chain-hello"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Amdubaloch", email = "amdubaloch2005@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.5.5",
    "openai-agents",
]

[project.scripts]
chain-hello = "chain_hello:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
